	PR middle-end/27095 	* builtins.c: (expand_builtin_memset): Stabilize args before expansion 	and emit libcall here in case the builtin fails. 	(expand_builtin_strcmp): Always emit the libcall here on failure.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@112948 138bc75d-0d04-0410-961f-82ee72b054a4